# librlimit

./: CMakeLists.txt  README.md  package.json
include/: rlimit.h
src/: posix.c  win32.c
test/: CMakeLists.txt  open-files-infer.c
